BUG #UICOE-171 [alignment issue fixed]

--- a/scss/components/modal/_modal.scss
+++ b/scss/components/modal/_modal.scss
@@ -64,7 +64,7 @@
     }
 
     &-content {
-        overflow-y: scroll;
+        overflow-y: auto;
         margin-bottom: 2rem;
         width: 100%;
         padding: 2% 10%;
