--- a/scss/utils/_mixins.scss
+++ b/scss/utils/_mixins.scss
@@ -151,7 +151,7 @@
 }
 
 // close icon
-@mixin hcl-close-icon($size: 18, $bg-color: transparent, $fg-color: $black, $rounded: false) {
+@mixin hcl-close-icon($size: 16, $bg-color: transparent, $fg-color: $black, $rounded: false) {
     width: #{$size}px;
     height: #{$size}px;
     position: relative;
